--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Christopher Glenn",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
     "uuid": "^10.0.0"
